--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -32,6 +32,7 @@ Name[id]=Sumber Perangkat Lunak
 Name[is]=Hugbúnaðarupptök
 Name[it]=Sorgenti software
 Name[ja]=ソフトウェアソース
+Name[km]=ប្រភព​កម្មវិធី
 Name[ko]=소프트웨어소스
 Name[ku]=Çavkaniyên Bernameyan
 Name[ky]=Программа булактары
@@ -40,6 +41,7 @@ Name[lv]=Programmatūras avoti
 Name[ml]=സോഫ്റ്റ്‌വെയര്‍ സ്രോതസ്സുകള്‍
 Name[mr]=सॉफ्टवेयर स्रोत
 Name[ms]=Sumber Perisian
+Name[nb]=Programvarekilder
 Name[nds]=Paketquellen
 Name[ne]=सफ्टवेयर स्रोतहरु
 Name[nl]=Softwarebronnen
@@ -64,6 +66,7 @@ Name[tg]=Манбаъҳои нармафзор
 Name[th]=แหล่งที่มาของซอฟต์แวร์
 Name[tr]=Yazılım Kaynakları
 Name[uk]=Джерела проґрамного забезпечення
+Name[uz]=Дастур манбалари
 Name[vi]=Nguồn Phần mềm
 Name[zh_CN]=软件源
 Name[zh_HK]=軟件來源
@@ -105,6 +108,7 @@ Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
 Comment[ms]=Konfigur sumber untuk perisian boleh pasang dan kemaskininya
+Comment[nb]=Sett opp kildene for installerbar programvare og oppdateringer
 Comment[nds]=Installationsquellen für Pakete und Updates bearbeiten
 Comment[nl]=Stel de bronnen in voor installeerbare programma's en updates
 Comment[oc]=Configurar las fonts d'installacion de logicials e de mesas a jorn
@@ -114,7 +118,7 @@ Comment[pt]=Configurar repositórios de aplicações e atualizações
 Comment[pt_BR]=Configurar as fontes para instalação e atualização de Software
 Comment[pt_PT]=Configurar repositórios de aplicações e atualizações
 Comment[ro]=Configurează sursele pentru software instalabil şi actualizări
-Comment[ru]=Настроить источники приложений и обновлений
+Comment[ru]=Настроить источники установки и обновления программ
 Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
 Comment[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
@@ -126,9 +130,10 @@ Comment[tg]=Танзим кардани манбаҳо барои нармафз
 Comment[th]=ปรับแต่งแหล่งของซอฟต์แวร์ที่ใช้ในการติดตั้งและปรับปรุงรุ่น
 Comment[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
 Comment[uk]=Налаштуйте джерела встановлюваного проґрамного забезпечення і оновлень
+Comment[uz]=Тизимга ўрнатса ва янгиласа бўладиган дастур манбаларини созлаш
 Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 Comment[zh_CN]=配置用于安装和升级软件的源
-Comment[zh_HK]=配置可安裝軟件及更新的來源。
+Comment[zh_HK]=配置可安裝軟件與更新的來源
 Comment[zh_TW]=設定可安裝軟體與更新的來源組態
 Exec=software-sources
 Icon=mintsources
