In mirror checks: l10n "offline" string, renamed it to Unreachable and differentiate with Obsolete.
Also, generated desktop files and updated pot file.

--- a/usr/share/applications/kde4/mintsources.desktop
+++ b/usr/share/applications/kde4/mintsources.desktop
@@ -97,7 +97,7 @@ Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil
 Comment[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
 Comment[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
-Comment[hr]=Postavite izvore za instalaciju i ažuriranje softvera
+Comment[hr]=Postavite izvore za instalaciju i nadopunu softvera
 Comment[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
 Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
@@ -117,7 +117,7 @@ Comment[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 Comment[pt]=Configurar repositórios de aplicações e atualizações
 Comment[pt_BR]=Configurar as fontes para instalação e atualização de Software
 Comment[pt_PT]=Configurar repositórios de aplicações e atualizações
-Comment[ro]=Configurează sursele pentru software instalabil şi actualizări
+Comment[ro]=Configurați sursele pentru software instalabil şi actualizări
 Comment[ru]=Настроить источники установки и обновления программ
 Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
@@ -161,7 +161,7 @@ GenericName[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suite
 GenericName[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 GenericName[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
 GenericName[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
-GenericName[hr]=Postavite izvore za instalaciju i ažuriranje softvera
+GenericName[hr]=Postavite izvore za instalaciju i nadopunu softvera
 GenericName[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
 GenericName[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 GenericName[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
@@ -181,7 +181,7 @@ GenericName[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 GenericName[pt]=Configurar repositórios de aplicações e atualizações
 GenericName[pt_BR]=Configurar as fontes para instalação e atualização de Software
 GenericName[pt_PT]=Configurar repositórios de aplicações e atualizações
-GenericName[ro]=Configurează sursele pentru software instalabil şi actualizări
+GenericName[ro]=Configurați sursele pentru software instalabil şi actualizări
 GenericName[ru]=Настроить источники установки и обновления программ
 GenericName[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 GenericName[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
