Added Sarah key

--- a/usr/share/mintsources/sarah/mintsources.conf
+++ b/usr/share/mintsources/sarah/mintsources.conf
@@ -35,8 +35,8 @@ pub=EFE21092
 uid=Ubuntu CD Image Automatic Signing Key (2012) <cdimage@ubuntu.com>
 
 [key_5]
-pub=0FF405B2
-uid=Clement Lefebvre (Linux Mint Package Repository v1) <root@linuxmint.com>
+pub=451BBBF2
+uid=Linux Mint Repository Signing Key <root@linuxmint.com>
 
 [key_6]
 pub=0C5A2783
