--- a/usr/share/applications/kde4/mintsources.desktop
+++ b/usr/share/applications/kde4/mintsources.desktop
@@ -33,6 +33,7 @@ Name[id]=Sumber Perangkat Lunak
 Name[is]=Hugbúnaðarupptök
 Name[it]=Sorgenti software
 Name[ja]=ソフトウェアソース
+Name[kk]=БҚ қайнар көздері
 Name[km]=ប្រភព​កម្មវិធី
 Name[ko]=소프트웨어소스
 Name[ku]=Çavkaniyên Bernameyan
@@ -105,6 +106,7 @@ Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 Comment[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
 Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
@@ -170,6 +172,7 @@ GenericName[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 GenericName[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 GenericName[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 GenericName[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+GenericName[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 GenericName[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
 GenericName[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 GenericName[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
@@ -204,7 +207,6 @@ GenericName[zh_HK]=設定可安裝軟件與更新的來源組態
 GenericName[zh_TW]=設定可安裝軟體與更新的來源組態
 Exec=software-sources
 Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
-NoDisplay=true
 Terminal=false
 Type=Application
 Encoding=UTF-8
