l10n: Generate desktop files

--- a/usr/share/applications/kde4/mintsources.desktop
+++ b/usr/share/applications/kde4/mintsources.desktop
@@ -6,19 +6,19 @@ Name[be]=Крыніцы праграм
 Name[bg]=Софтуерни източници
 Name[bn]=সফটওয়্যারের উৎসসমূহ
 Name[bs]=Izvori softvera
-Name[ca]=Fonts del programari
-Name[ca@valencia]=Fonts del programari
+Name[ca]=Orígens de programari
+Name[ca@valencia]=Orígens de programari
 Name[cs]=Zdroje softwaru
 Name[cy]=Ffynonellau Meddalwedd
 Name[da]=Programkilder
 Name[de]=Anwendungspaketquellen
 Name[el]=Πηγές Λογισμικού
 Name[eo]=Programaraj fontoj
-Name[es]=Orígenes del software
+Name[es]=Fuentes de software
 Name[et]=Tarkvaraallikad
 Name[eu]=Software-jatorriak
 Name[fa]=منابع برنامه ها
-Name[fi]=Ohjelmalähteet
+Name[fi]=Ohjelmistolähteet
 Name[fr]=Sources de logiciels
 Name[fr_CA]=Sources de logiciels
 Name[fy]=Softwareboarnen
@@ -33,6 +33,7 @@ Name[id]=Sumber Perangkat Lunak
 Name[is]=Hugbúnaðarupptök
 Name[it]=Sorgenti software
 Name[ja]=ソフトウェアソース
+Name[kab]=Iɣbula n iseɣẓanen
 Name[kk]=БҚ қайнар көздері
 Name[km]=ប្រភព​កម្មវិធី
 Name[ko]=소프트웨어소스
@@ -50,6 +51,7 @@ Name[nl]=Pakketbronnen
 Name[oc]=Fonts de mesa a jorn
 Name[om]=Madda mosajjii
 Name[pa]=ਸਾਫਟਵੇਅਰ ਸਰੋਤ
+Name[pap]=Fuentenan di programma
 Name[pl]=Zasoby oprogramowania
 Name[pt]=Repositórios
 Name[pt_BR]=Fontes de Aplicativos
@@ -80,15 +82,15 @@ Comment[be]=Наставіць крыніцы праграм і абнаўлен
 Comment[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 Comment[bs]=Podesite izvore za programe koje je moguće instalirati i ažurirati
-Comment[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
-Comment[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
+Comment[ca]=Configura els orígens per a les actualitzacions i el programari instal·lable
+Comment[ca@valencia]=Configura els orígens per a les actualitzacions i el programari instal·lable
 Comment[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
 Comment[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
 Comment[da]=Konfigurér kilderne for installérbare programmer og opdateringer
 Comment[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 Comment[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 Comment[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
-Comment[es]=Configure los orígenes de las actualizaciones y el software instalable
+Comment[es]=Configure las fuentes de los programas y actualizaciones instalables
 Comment[et]=Paigaldatava tarkvara ja uuenduste allikate seadistamine
 Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 Comment[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
@@ -106,8 +108,10 @@ Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[kab]=Swel iɣbula n iseɣẓanen akked ileqman yettwasebdaden
 Comment[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 Comment[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
+Comment[ku]=Ji bo nivîsbarî û rojanekirinên têne sazkirin çavkaniyan veava bike
 Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
@@ -117,6 +121,7 @@ Comment[nds]=Installationsquellen für Pakete und Updates bearbeiten
 Comment[nl]=Stel de bronnen in voor installeerbare programma's en bijgewerkte pakketten
 Comment[oc]=Configurar las fonts d'installacion de logicials e de mesas a jorn
 Comment[pa]=ਇੰਸਟਾਲ ਯੋਗ ਸਾਫਟਵੇਅਰ ਅਤੇ ਅੱਪਡੇਟ ਲਈ ਸਰੋਤਾਂ ਦੀ ਸੰਰਚਨਾ ਕਰੋ
+Comment[pap]=Konfigura e fuentenan pa software ku por instala i updates
 Comment[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 Comment[pt]=Configurar repositórios de aplicações e atualizações
 Comment[pt_BR]=Configurar as fontes para instalação e atualização de Software
@@ -146,15 +151,15 @@ GenericName[be]=Наставіць крыніцы праграм і абнаўл
 GenericName[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 GenericName[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 GenericName[bs]=Podesite izvore za programe koje je moguće instalirati i ažurirati
-GenericName[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
-GenericName[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
+GenericName[ca]=Configura els orígens per a les actualitzacions i el programari instal·lable
+GenericName[ca@valencia]=Configura els orígens per a les actualitzacions i el programari instal·lable
 GenericName[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
 GenericName[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
 GenericName[da]=Konfigurér kilderne for installérbare programmer og opdateringer
 GenericName[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 GenericName[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 GenericName[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
-GenericName[es]=Configure los orígenes de las actualizaciones y el software instalable
+GenericName[es]=Configure las fuentes de los programas y actualizaciones instalables
 GenericName[et]=Paigaldatava tarkvara ja uuenduste allikate seadistamine
 GenericName[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 GenericName[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
@@ -172,8 +177,10 @@ GenericName[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 GenericName[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 GenericName[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 GenericName[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+GenericName[kab]=Swel iɣbula n iseɣẓanen akked ileqman yettwasebdaden
 GenericName[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 GenericName[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
+GenericName[ku]=Ji bo nivîsbarî û rojanekirinên têne sazkirin çavkaniyan veava bike
 GenericName[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 GenericName[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 GenericName[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
@@ -183,6 +190,7 @@ GenericName[nds]=Installationsquellen für Pakete und Updates bearbeiten
 GenericName[nl]=Stel de bronnen in voor installeerbare programma's en bijgewerkte pakketten
 GenericName[oc]=Configurar las fonts d'installacion de logicials e de mesas a jorn
 GenericName[pa]=ਇੰਸਟਾਲ ਯੋਗ ਸਾਫਟਵੇਅਰ ਅਤੇ ਅੱਪਡੇਟ ਲਈ ਸਰੋਤਾਂ ਦੀ ਸੰਰਚਨਾ ਕਰੋ
+GenericName[pap]=Konfigura e fuentenan pa software ku por instala i updates
 GenericName[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 GenericName[pt]=Configurar repositórios de aplicações e atualizações
 GenericName[pt_BR]=Configurar as fontes para instalação e atualização de Software
