HiDPI: Use icon names and SVG icons

--- a/usr/share/applications/kde4/mintsources.desktop
+++ b/usr/share/applications/kde4/mintsources.desktop
@@ -214,7 +214,7 @@ GenericName[zh_CN]=配置用于安装和升级软件的源
 GenericName[zh_HK]=設定可安裝軟件與更新的來源組態
 GenericName[zh_TW]=設定可安裝軟體與更新的來源組態
 Exec=software-sources
-Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
+Icon=mintsources
 Terminal=false
 Type=Application
 Encoding=UTF-8
