add Mint 19 support and also drop unneeded Medibuntu keys (#103)
* drop Medibuntu key from all releases

that project is dead since 2013

* add support for Mint 19 Tara

--- a/usr/share/mintsources/tara/mintsources.conf
+++ b/usr/share/mintsources/tara/mintsources.conf
@@ -1,20 +1,16 @@
 [general]
-description=Linux Mint 17 "Qiana"
-codename=qiana
-base_codename=trusty
+description=Linux Mint 19 "Tara"
+codename=tara
+base_codename=bionic
 use_ppas=true
 
 [mirrors]
 default=http://packages.linuxmint.com
 base_default=http://archive.ubuntu.com/ubuntu
-mirrors=/usr/share/python-apt/templates/LinuxMint.mirrors
+mirrors=/usr/share/mint-mirrors/linuxmint.list
 base_mirrors=/usr/share/python-apt/templates/Ubuntu.mirrors
 
 [optional_component_1]
-name=backport
-description=Backported packages (backport)
-
-[optional_component_2]
 name=romeo
 description=Unstable packages (romeo)
 
@@ -39,8 +35,8 @@ pub=EFE21092
 uid=Ubuntu CD Image Automatic Signing Key (2012) <cdimage@ubuntu.com>
 
 [key_5]
-pub=0FF405B2
-uid=Clement Lefebvre (Linux Mint Package Repository v1) <root@linuxmint.com>
+pub=451BBBF2
+uid=Linux Mint Repository Signing Key <root@linuxmint.com>
 
 [key_6]
 pub=46D7E7CF
