Cindy: Switch to deb.debian.org

--- a/usr/share/mintsources/cindy/mintsources.conf
+++ b/usr/share/mintsources/cindy/mintsources.conf
@@ -6,7 +6,7 @@ use_ppas=false
 
 [mirrors]
 default=http://packages.linuxmint.com
-base_default=http://ftp.us.debian.org/debian
+base_default=http://deb.debian.org/debian
 mirrors=/usr/share/python-apt/templates/LinuxMint.mirrors
 base_mirrors=/usr/share/python-apt/templates/Debian.mirrors
 
