--- a/debian/control
+++ b/debian/control
@@ -8,11 +8,8 @@ Standards-Version: 3.9.5
 Package: mintsources
 Architecture: all
 Essential: yes
-Depends: python (>= 2.4),
-         python (<< 3),
-         python-apt,
-         python-pycurl,
-         python3,
+Depends: python3-apt,
+         python3-pycurl,
          python3-xapp,
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
@@ -21,8 +18,7 @@ Depends: python (>= 2.4),
          gir1.2-vte-2.91,
          dash,
          iso-flag-png,
-         lsb-release,
-         synaptic,
+         lsb-release
 Replaces: software-properties-common (<< 1),
           software-properties-gtk (<< 1),
           software-properties-kde (<< 1),
