Add message in polkit policy

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Software Sources
 Name[am]=የሶፍትዌር ምንጮች
-Name[ar]=مصادر البرمجيات
+Name[ar]=مصادر البرامج
 Name[be]=Крыніцы праграм
 Name[bg]=Софтуерни източници
 Name[bn]=সফটওয়্যারের উৎসসমূহ
@@ -26,7 +26,8 @@ Name[ga]=Foinsí Bogearraí
 Name[gd]=Tùsan bathair-bhog
 Name[gl]=Orixes do software
 Name[he]=מקורות תוכנה
-Name[hr]=Softver repozitoriji
+Name[hi]=सॉफ्टवेयर स्रोत
+Name[hr]=Repozitoriji softvera
 Name[hu]=Szoftverforrások
 Name[ia]=Fontes de software
 Name[id]=Sumber Perangkat Lunak
@@ -77,20 +78,20 @@ Name[zh_HK]=軟件來源
 Name[zh_TW]=軟體來源
 Comment=Configure the sources for installable software and updates
 Comment[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
-Comment[ar]=إعداد المصادر للبرمجيات والتحديثات القابلة للتثبيت
+Comment[ar]=تكوين مصادر البرامج والتحديثات القابلة للتثبيت
 Comment[be]=Наставіць крыніцы праграм і абнаўленняў
 Comment[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 Comment[bs]=Podesite izvore za programe koje je moguće instalirati i ažurirati
-Comment[ca]=Configureu els orígens per a les actualitzacions i el programari instal·lable
-Comment[ca@valencia]=Configureu els orígens per a les actualitzacions i el programari instal·lable
+Comment[ca]=Configureu els orígens per al programari instal·lable i actualitzacions
+Comment[ca@valencia]=Configureu els orígens per al programari instal·lable i actualitzacions
 Comment[cs]=Nastavit zdroje pro instalaci software a aktualizací
 Comment[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
 Comment[da]=Konfigurér kilderne for installérbare programmer og opdateringer
 Comment[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 Comment[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 Comment[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
-Comment[es]=Configure las fuentes de los programas y actualizaciones instalables
+Comment[es]=Configure las fuentes de los programas instalables y las actualizaciones
 Comment[et]=Paigaldatava tarkvara ja uuenduste allikate seadistamine
 Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 Comment[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
@@ -101,6 +102,7 @@ Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil
 Comment[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
 Comment[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
+Comment[hi]=इंस्टॉल योग्य सॉफ़्टवेयर व अपडेट हेतु स्रोत विन्यस्त करें
 Comment[hr]=Postavite izvore za instalaciju i nadopunu softvera
 Comment[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
 Comment[ia]=Configurar le fontes pro le software e le ajornamentos installabile
