polkit: Use auth_admin for the action file, to require an admin user rather than allowing the current user to authenticate.
Also make it so mintsources can be run from any context (including
a terminal) and have the polkit authenticator trigger.

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -146,7 +146,7 @@ Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 Comment[zh_CN]=配置用于安装和升级软件的源
 Comment[zh_HK]=設定可安裝軟件與更新的來源組態
 Comment[zh_TW]=設定可安裝軟體與更新的來源組態
-Exec=pkexec mintsources
+Exec=mintsources
 Icon=mintsources
 Terminal=false
 X-MultipleArgs=false
