--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Depends: python3-apt,
          gir1.2-gtk-3.0,
          gir1.2-pango-1.0,
          gir1.2-vte-2.91,
+         gir1.2-xapp-1.0,
          dash,
          iso-flag-png,
          lsb-release
