--- a/usr/share/mintsources/cindy/mintsources.conf
+++ b/usr/share/mintsources/cindy/mintsources.conf
@@ -19,45 +19,45 @@ main_identifier=main upstream import
 base_identifier=-updates main contrib non-free
 
 [key_1]
-pub=65558117
+pub=A401 FF99 368F A1F9 8152  DE75 5C80 8C2B 6555 8117
 uid=Christian Marillat <marillat@debian.org>
 
 [key_2]
-pub=1F41B907
+pub=1D7F C53F 80F8 52C1 88F4  ED0B 07DC 563D 1F41 B907
 uid=Christian Marillat <marillat@free.fr>
 
 [key_3]
-pub=0FF405B2
+pub=E1A3 8B8F 1446 75D0 60EA  666F 3EE6 7F3D 0FF4 05B2
 uid=Clement Lefebvre (Linux Mint Package Repository v1) <root@linuxmint.com>
 
 [key_4]
-pub=451BBBF2
+pub=302F 0738 F465 C153 5761  F965 A661 6109 451B BBF2
 uid=Linux Mint Repository Signing Key <root@linuxmint.com>
 
 [key_5]
-pub=473041FA
+pub=9FED 2BCB DCD2 9CDF 7626  78CB AED4 B06F 4730 41FA
 uid=Debian Archive Automatic Signing Key (6.0/squeeze) <ftpmaster@debian.org>
 
 [key_6]
-pub=46925553
+pub=A1BD 8E9D 78F7 FE5C 3E65  D8AF 8B48 AD62 4692 5553
 uid=Debian Archive Automatic Signing Key (7.0/wheezy) <ftpmaster@debian.org>
 
 [key_7]
-pub=2B90D010
+pub=126C 0D24 BD8A 2942 CC7D  F8AC 7638 D044 2B90 D010
 uid=Debian Archive Automatic Signing Key (8/jessie) <ftpmaster@debian.org>
 
 [key_8]
-pub=C857C906
+pub=D211 6914 1CEC D440 F2EB  8DDA 9D6D 8F6B C857 C906
 uid=Debian Security Archive Automatic Signing Key (8/jessie) <ftpmaster@debian.org>
 
 [key_9]
-pub=518E17E1
+pub=75DD C3C4 A499 F1A1 8CB5  F3C8 CBF8 D6FD 518E 17E1
 uid=Jessie Stable Release Key <debian-release@lists.debian.org>
 
 [key_10]
-pub=B98321F9
+pub=0E4E DE2C 7F3E 1FC0 D033  800E 6448 1591 B983 21F9
 uid=Squeeze Stable Release Key <debian-release@lists.debian.org>
 
 [key_11]
-pub=65FFB764
+pub=ED6D 6527 1AAC F0FF 15D1  2303 6FB2 A1C2 65FF B764
 uid=Wheezy Stable Release Key <debian-release@lists.debian.org>
