--- a/usr/share/mintsources/tara/mintsources.conf
+++ b/usr/share/mintsources/tara/mintsources.conf
@@ -19,30 +19,26 @@ main_identifier=main upstream import
 base_identifier=-updates main restricted universe multiverse
 
 [key_1]
-pub=437D05B5
+pub=6302 39CC 130E 1A7F D81A  27B1 4097 6EAF 437D 05B5
 uid=Ubuntu Archive Automatic Signing Key <ftpmaster@ubuntu.com>
 
 [key_2]
-pub=FBB75451
+pub=C598 6B4F 1257 FFA8 6632  CBA7 4618 1433 FBB7 5451
 uid=Ubuntu CD Image Automatic Signing Key <cdimage@ubuntu.com>
 
 [key_3]
-pub=C0B21F32
+pub=790B C727 7767 219C 42C8  6F93 3B4F E6AC C0B2 1F32
 uid=Ubuntu Archive Automatic Signing Key (2012) <ftpmaster@ubuntu.com>
 
 [key_4]
-pub=EFE21092
+pub=8439 38DF 228D 22F7 B374  2BC0 D94A A3F0 EFE2 1092
 uid=Ubuntu CD Image Automatic Signing Key (2012) <cdimage@ubuntu.com>
 
 [key_5]
-pub=451BBBF2
+pub=302F 0738 F465 C153 5761  F965 A661 6109 451B BBF2
 uid=Linux Mint Repository Signing Key <root@linuxmint.com>
 
-[key_6]
-pub=46D7E7CF
-uid=GetDeb Archive Automatic Signing Key <archive@getdeb.net>
-
 [key_7]
-pub=3E5C1192
+pub=C474 15DF F48C 0964 5B78  6094 1612 6D3A 3E5C 1192
 uid=Ubuntu Extras Archive Automatic Signing Key <ftpmaster@ubuntu.com>
 
