--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -59,6 +59,7 @@ Name[pt_BR]=Fontes de Aplicativos
 Name[pt_PT]=Repositórios
 Name[ro]=Surse software
 Name[ru]=Источники приложений
+Name[sc]=Mitzas de su software
 Name[si]=මෘදුකාංග මූලාශ්‍රයන්
 Name[sk]=Zdroje softvéru
 Name[sl]=Programski viri
