--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Essential: yes
 Depends: python3-apt,
          python3-gi,
          python3-pycurl,
-         mint-common (>= 1.3.0),
+         mint-common (>= 2),
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
          gir1.2-gtk-3.0,
@@ -20,8 +20,7 @@ Depends: python3-apt,
          gir1.2-xapp-1.0,
          dash,
          iso-flag-png,
-         lsb-release,
-         mint-common (>= 2)
+         lsb-release
 Replaces: software-properties-common (<< 1),
           software-properties-gtk (<< 1),
           python-software-properties (<< 1),
