--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Architecture: all
 Essential: yes
 Depends: python3-apt,
          python3-gi,
+         python3-gi-cairo,
          python3-pycurl,
          mint-common (>= 2),
          gir1.2-gdkpixbuf-2.0,
