--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: mintsources
 Section: admin
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
-Build-Depends: debhelper (>= 9), python
+Build-Depends: debhelper (>= 9), python3
 Standards-Version: 3.9.5
 
 Package: mintsources
