LMDE 5: Add older keys
debian-archive-keyring keeps a copy of them.

--- a/usr/share/mintsources/elsie/mintsources.conf
+++ b/usr/share/mintsources/elsie/mintsources.conf
@@ -46,3 +46,26 @@ uid=Debian Archive Automatic Signing Key (11/bullseye) <ftpmaster@debian.org>
 pub=A428 5295 FC7B 1A81 6000 62A9 605C 66F0 0D6C 9793
 uid=Debian Stable Release Key (11/bullseye) <debian-release@lists.debian.org>
 
+[key_8]
+pub=5E61 B217 265D A980 7A23  C5FF 4DFA B270 CAA9 6DFA
+uid=Debian Security Archive Automatic Signing Key (10/buster) <ftpmaster@debian.org>
+
+[key_9]
+pub=80D1 5823 B7FD 1561 F9F7  BCDD DC30 D7C2 3CBB ABEE
+uid=Debian Archive Automatic Signing Key (10/buster) <ftpmaster@debian.org>
+
+[key_10]
+pub=6D33 866E DD8F FA41 C014 3AED DCC9 EFBF 77E1 1517
+uid=Debian Stable Release Key (10/buster) <debian-release@lists.debian.org>
+
+[key_11]
+pub=6ED6 F5CB 5FA6 FB2F 460A  E88E EDA0 D238 8AE2 2BA9
+uid=Debian Security Archive Automatic Signing Key (9/stretch) <ftpmaster@debian.org>
+
+[key_12]
+pub=E1CF 20DD FFE4 B89E 8026  58F1 E0B1 1894 F66A EC98
+uid=Debian Archive Automatic Signing Key (9/stretch) <ftpmaster@debian.org>
+
+[key_13]
+pub=067E 3C45 6BAE 240A CEE8 8F6F EF0F 382A 1A7B 6500
+uid=Debian Stable Release Key (9/stretch) <debian-release@lists.debian.org>
