--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -31,8 +31,9 @@ Name[hr]=Repozitoriji softvera
 Name[hu]=Szoftverforrások
 Name[ia]=Fontes de software
 Name[id]=Sumber Perangkat Lunak
+Name[ie]=Orígines de programmas
 Name[is]=Hugbúnaðarupptök
-Name[it]=Origini Software
+Name[it]=Origini software
 Name[ja]=ソフトウェアソース
 Name[kab]=Iɣbula n iseɣẓanen
 Name[kk]=БҚ қайнар көздері
@@ -40,6 +41,7 @@ Name[km]=ប្រភព​កម្មវិធី
 Name[ko]=소프트웨어 소스
 Name[ku]=Çavkaniyên Bernameyan
 Name[ky]=Программа булактары
+Name[la]=Fontes Softwaris
 Name[lt]=Programinės įrangos saugyklos
 Name[lv]=Programmatūras avoti
 Name[ml]=സോഫ്റ്റ്‌വെയര്‍ സ്രോതസ്സുകള്‍
@@ -64,7 +66,7 @@ Name[sk]=Zdroje softvéru
 Name[sl]=Programski viri
 Name[sq]=Burimet e programeve
 Name[sr]=Извори програма
-Name[sr@latin]=Извори програма
+Name[sr@latin]=Izvori softvera
 Name[sv]=Programkällor
 Name[ta]=மென்பொருள் மூலங்கள்
 Name[tg]=Манбаъҳои нармафзор
@@ -79,18 +81,18 @@ Name[zh_TW]=軟體來源
 Comment=Configure the sources for installable software and updates
 Comment[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
 Comment[ar]=تكوين مصادر البرامج والتحديثات القابلة للتثبيت
-Comment[be]=Наставіць крыніцы праграм і абнаўленняў
+Comment[be]=Наладзіць крыніцы ўсталявання праграм і абнаўленняў
 Comment[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 Comment[bs]=Podesite izvore za programe koje je moguće instalirati i ažurirati
 Comment[ca]=Configureu els orígens per al programari instal·lable i actualitzacions
 Comment[ca@valencia]=Configureu els orígens per al programari instal·lable i actualitzacions
 Comment[cs]=Nastavit zdroje pro instalaci software a aktualizací
-Comment[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
+Comment[cy]=Ffurfweddu'r ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
 Comment[da]=Konfigurér kilderne for installérbare programmer og opdateringer
 Comment[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 Comment[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
-Comment[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
+Comment[eo]=Agordi la fontojn por instaleblaj programaro kaj ĝisdatigoj
 Comment[es]=Configurar las fuentes de los programas instalables y las actualizaciones
 Comment[et]=Paigaldatava tarkvara ja uuenduste allikate seadistamine
 Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
@@ -101,12 +103,13 @@ Comment[fr_CA]=Configurer les sources des logiciels installables et des mises à
 Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
 Comment[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
-Comment[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
+Comment[he]=תצור מקורות  להתקנות תכנה ועדכונים
 Comment[hi]=इंस्टॉल योग्य सॉफ़्टवेयर व अपडेट हेतु स्रोत विन्यस्त करें
 Comment[hr]=Postavite izvore za instalaciju i nadopunu softvera
 Comment[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
 Comment[ia]=Configurar le fontes pro le software e le ajornamentos installabile
 Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
+Comment[ie]=Configurar li fontes de programmas e actualisamentes
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le origini per il software installabile e per gli aggiornamenti
 Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
@@ -114,6 +117,7 @@ Comment[kab]=Swel iɣbula n iseɣẓanen akked ileqman yettwasebdaden
 Comment[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 Comment[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
 Comment[ku]=Ji bo nivîsbarî û rojanekirinên têne sazkirin çavkaniyan veava bike
+Comment[la]=Thesauros ad softwaris novationesque instituendas ordina
 Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
@@ -133,7 +137,7 @@ Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
 Comment[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
 Comment[sr]=Подесите изворе за програме и надоградње
-Comment[sr@latin]=Подесите изворе за програме и надоградње
+Comment[sr@latin]=Konfigurišite izvore za softver i ažuriranja koji se mogu instalirati
 Comment[sv]=Konfigurera källorna för installerbara program och uppdateringar
 Comment[ta]=நிறுவத்தக்க மென்பொருட்கள் மற்றும் புதுப்பித்தல்களுக்கான மூலங்களைக் கட்டமைக்கவும்
 Comment[tg]=Танзим кардани манбаҳо барои нармафзор ва навсозиҳои насбшаванда
