Rework key handling
Following the deprecation of apt-key add, we're now doing the following:

- Place PPA keys in /usr/share/keyrings (not globally trusted)
- Have only the PPA trust the key (using signed-by in the .list file)

This commit also fixes the following issues:

- New URL for launchpad PPA
- Listing PPAs which use signed-by

--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Depends: python3-apt,
          gir1.2-vte-2.91,
          gir1.2-xapp-1.0,
          iso-flag-png,
+         inxi,
          lsb-release
 Replaces: software-properties-common (<< 1),
           software-properties-gtk (<< 1)
