--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Depends: python3-apt,
          python3-gi-cairo,
          python3-pycurl,
          python3-requests,
+         python3-repolib,
          mint-common (>= 2),
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
