Add gir1.2-packagekitglib-1.0 dependency

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Depends: python3-apt,
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
          gir1.2-gtk-3.0,
+         gir1.2-packagekitglib-1.0,
          gir1.2-pango-1.0,
          gir1.2-vte-2.91,
          gir1.2-xapp-1.0,
