l10n: Generate desktop files

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -17,7 +17,7 @@ Name[eo]=Programaraj fontoj
 Name[es]=Fuentes de software
 Name[et]=Tarkvaraallikad
 Name[eu]=Software-jatorriak
-Name[fa]=منابع برنامه ها
+Name[fa]=منابع نرم‌افزاری
 Name[fi]=Ohjelmistolähteet
 Name[fr]=Sources de logiciels
 Name[fr_CA]=Sources de logiciels
@@ -35,6 +35,7 @@ Name[ie]=Orígines de programmas
 Name[is]=Hugbúnaðarupptök
 Name[it]=Origini software
 Name[ja]=ソフトウェアソース
+Name[ka]=პროგრამების წყაროები
 Name[kab]=Iɣbula n iseɣẓanen
 Name[kk]=БҚ қайнар көздері
 Name[km]=ប្រភព​កម្មវិធី
@@ -73,7 +74,7 @@ Name[tg]=Манбаъҳои нармафзор
 Name[th]=แหล่งที่มาของซอฟต์แวร์
 Name[tr]=Yazılım Kaynakları
 Name[uk]=Джерела програмного забезпечення
-Name[uz]=Дастур манбалари
+Name[uz]=Dastur manbalari
 Name[vi]=Nguồn Phần mềm
 Name[zh_CN]=软件源
 Name[zh_HK]=軟件來源
@@ -103,16 +104,16 @@ Comment[fr_CA]=Configurer les sources des logiciels installables et des mises à
 Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
 Comment[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
-Comment[he]=תצור מקורות  להתקנות תכנה ועדכונים
+Comment[he]=תצור המקורות לאפשור התקנת תוכנה ועדכונים
 Comment[hi]=इंस्टॉल योग्य सॉफ़्टवेयर व अपडेट हेतु स्रोत विन्यस्त करें
 Comment[hr]=Postavite izvore za instalaciju i nadopunu softvera
 Comment[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
-Comment[ia]=Configurar le fontes pro le software e le ajornamentos installabile
+Comment[ia]=Configurar le fontes pro le software installabile e actualisationes
 Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[ie]=Configurar li fontes de programmas e actualisamentes
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le origini per il software installabile e per gli aggiornamenti
-Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[ja]=インストール可能なソフトウェア、およびアップデートの配布元を設定します
 Comment[kab]=Swel iɣbula n iseɣẓanen akked ileqman yettwasebdaden
 Comment[kk]=Орнатылатын және жаңартылатын бағдарламалар үшін, бағдарламалар қайнар көздерін қалыпқа келтіру
 Comment[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
@@ -132,7 +133,7 @@ Comment[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 Comment[pt]=Configurar repositórios de aplicações e atualizações
 Comment[pt_BR]=Configura as fontes de instalação e atualização de aplicativos
 Comment[ro]=Configurați sursele pentru software instalabil şi actualizări
-Comment[ru]=Настроить источники установки и обновления программ
+Comment[ru]=Настроить источники для устанавливаемого ПО и обновлений
 Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
 Comment[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
@@ -144,7 +145,7 @@ Comment[tg]=Танзим кардани манбаҳо барои нармафз
 Comment[th]=ปรับแต่งแหล่งของซอฟต์แวร์ที่ใช้ในการติดตั้งและปรับปรุงรุ่น
 Comment[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
 Comment[uk]=Налаштуйте джерела встановлення та оновлення програмного забезпечення.
-Comment[uz]=Тизимга ўрнатса ва янгиласа бўладиган дастур манбаларини созлаш
+Comment[uz]=O‘rnatish mumkin bo‘lgan dasturiy ta'minot va yangilanishlar uchun manbalarni sozlash
 Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 Comment[zh_CN]=配置用于安装和升级软件的源
 Comment[zh_HK]=設定可安裝軟件與更新的來源組態
