--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Depends: python3-apt,
          python3-pycurl,
          python3-requests,
          python3-repolib,
-         apt-kit,
+         aptkit,
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
          gir1.2-gtk-3.0,
