--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,11 @@ Source: mintsources
 Section: admin
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
-Build-Depends: debhelper (>= 9), python3
+Build-Depends: debhelper-compat (= 13), python3
 Standards-Version: 3.9.5
 
 Package: mintsources
 Architecture: all
-Essential: yes
 Depends: python3-apt,
          python3-gi,
          python3-gi-cairo,
@@ -23,7 +22,9 @@ Depends: python3-apt,
          gir1.2-xapp-1.0,
          iso-flag-png,
          inxi,
-         lsb-release
+         lsb-release,
+         mint-mirrors,
+         ${misc:Depends},
 Replaces: software-properties-common (<< 1),
           software-properties-gtk (<< 1)
 Description: Software Sources configuration tool
